-Solving the overflow issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -151,7 +151,7 @@
   // border: 1px solid red;
   overflow: hidden;
   width: 100%;
-  height: 100%;;
+  height: 100%;
 }
 
 .projectsContainer{
